# farcal-framework

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
framework/: CMakeLists.txt
framework/include/framework/: context.hpp  draw.hpp  framework.hpp  input.hpp  style.hpp  widgets.hpp  window.hpp
framework/include/framework/backends/: dx10.hpp  dx11.hpp  dx9.hpp
framework/include/framework/internal/: widgets.hpp
framework/src/: context.cpp  draw.cpp  input.cpp  main.cpp  widgets.cpp
framework/src/backends/: dx10.cpp  dx11.cpp  dx9.cpp
framework/src/widgets/: children.cpp  colors.cpp  controls.cpp  input.cpp  keybinds.cpp  layout.cpp  lists.cpp  tabs.cpp  text.cpp  tooltips.cpp  windows.cpp
framework/src/win32/: window.cpp
tests/: CMakeLists.txt  component_demo.hpp
tests/dx10-window-test/: CMakeLists.txt  main.cpp
tests/dx11-window-test/: CMakeLists.txt  main.cpp
tests/dx9-window-test/: CMakeLists.txt  main.cpp
